ostad-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ostad-server
  namespace: arafat-al-mahmud-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ostad-server
  template:
    metadata:
      labels:
        app: ostad-server
    spec:
      containers:
        - name: ostad-server
          image: arafat89/ostad-server:latest
          ports:
            - containerPort: 5050
          resources:
            requests:
              memory: 512Mi
              cpu: 250m
            limits:
              memory: 1Gi
              cpu: 500m
