ostad-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ostad-ui-deployment
  namespace: arafat-al-mahmud-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ostad-ui
  template:
    metadata:
      labels:
        app: ostad-ui
    spec:
      containers:
        - name: ostad-ui
          image: arafat89/ostad-ui:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 512Mi
              cpu: 250m
            limits:
              memory: 1Gi
              cpu: 500m
