ostad-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ostad-ui
  namespace: arafat-al-mahmud-ns
spec:
  selector:
    app: ostad-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
